# fifengine

./: .astylerc  .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .pylintrc  .travis.mac.sh  .travis.sh  .travis.yml  AUTHORS  CHANGELOG.md  CHANGES  CMakeLists.txt  CMakePresets.json  COPYING  CPPLINT.cfg  INSTALL  NOTES.md  README  README.md  SConstruct  appveyor.yml  doxygen.conf  fife_engine.py  fo_remake.py  layer.cpp  linux2-config-dist.py  pyproject.toml  run_tests.py  setup.py  techdemo.py  techdemo_chewie.py  techdemo_settings.py  test_fife.py  vcpkg-deps.md  vcpkg.json  vcpkg.sh  viewgamestate.py  win32-config-dist.py
2007.1-r1/ext/guichan-0.6.1/src/: Makefile.am  color.cpp  event.cpp  inputevent.cpp
cmake/patches/libogg/: CMakeLists.txt
cmake/patches/libvorbis/: CMakeLists.txt
cmake/patches/tinyxml/: CMakeLists.txt
dependencies/: CMakeLists.txt  README.md  build.bat  build.sh
ext/guichan-0.7.1/src/: Makefile  Makefile.am  Makefile.in  basiccontainer.cpp  cliprectangle.cpp  color.cpp  exception.cpp  focushandler.cpp  font.cpp  genericinput.cpp  graphics.cpp  gui.cpp  guichan.cpp  image.cpp  imagefont.cpp  keyinput.cpp  mouseevent.cpp  rectangle.cpp  widget.cpp
ext/guichan-0.7.1/src/.deps/: actionevent.Plo  basiccontainer.Plo  cliprectangle.Plo  color.Plo  defaultfont.Plo  event.Plo  exception.Plo  focushandler.Plo  font.Plo  genericinput.Plo  graphics.Plo  gui.Plo  guichan.Plo  image.Plo  imagefont.Plo  inputevent.Plo  key.Plo  keyevent.Plo  keyinput.Plo  mouseevent.Plo  mouseinput.Plo  rectangle.Plo  widget.Plo
ext/guichan-0.7.1/src/allegro/: Makefile  Makefile.am  Makefile.in  allegrofont.cpp  allegrographics.cpp  allegroimage.cpp  allegroinput.cpp
ext/guichan-0.7.1/src/hge/: Makefile  hgegraphics.cpp  hgeimage.cpp  hgeimagefont.cpp  hgeimageloader.cpp  hgeinput.cpp
ext/guichan-0.7.1/src/opengl/: Makefile  Makefile.in  opengl.cpp  openglgraphics.cpp
ext/guichan-0.7.1/src/openlayer/: Makefile  openlayer.cpp  openlayerfont.cpp  openlayergraphics.cpp  openlayerimage.cpp  openlayerimageloader.cpp  openlayerinput.cpp
ext/guichan-0.7.1/src/sdl/: Makefile  Makefile.in  sdl.cpp  sdlgraphics.cpp  sdlimageloader.cpp
ext/guichan-0.7.1/src/widgets/: Makefile  Makefile.am  Makefile.in  button.cpp  checkbox.cpp  container.cpp  dropdown.cpp  icon.cpp  listbox.cpp  radiobutton.cpp  slider.cpp  textfield.cpp  window.cpp
ext/guichan-0.8.1/include/guichan/: Makefile.am  Makefile.in  actionlistener.hpp  basiccontainer.hpp  deathlistener.hpp  defaultfont.hpp  exception.hpp  focushandler.hpp  focuslistener.hpp  font.hpp  genericinput.hpp  gui.hpp  hge.hpp  image.hpp  imagefont.hpp  imageloader.hpp  input.hpp  key.hpp  keyevent.hpp  keylistener.hpp  opengl.hpp  platform.hpp  selectionevent.hpp  selectionlistener.hpp  widget.hpp  widgetlistener.hpp
ext/guichan-0.8.1/src/sdl/: Makefile.am  Makefile.in  sdl.cpp  sdlimage.cpp
ext/guichan-0.8.1/src/widgets/: Makefile.am  Makefile.in  button.cpp  checkbox.cpp  container.cpp  dropdown.cpp  label.cpp  listbox.cpp  radiobutton.cpp  scrollarea.cpp  slider.cpp  tabbedarea.cpp  textbox.cpp  textfield.cpp  window.cpp
ext/guichan-0.8.2/: COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  configure  configure.in  guichan-0.8.pc.in
ext/guichan-0.8.2/examples/: Makefile.am  Makefile.examples  Makefile.in  action.hpp  allegro.hpp  allegroaction.cpp  allegrohelloworld.cpp  helloworld.hpp  hge.hpp  hgeaction.cpp  hgehelloworld.cpp  hgewidgets.cpp  openglallegro.hpp  openglallegroaction.cpp  openglallegrohelloworld.cpp  openglallegrowidgets.cpp  openglsdl.hpp  openglsdlaction.cpp  openglsdlhelloworld.cpp  openglsdlwidgets.cpp  openlayer.hpp  openlayerwidgets.cpp  sdl.hpp  sdlhelloworld.cpp  widgets.hpp
ext/guichan-0.8.2/include/: Makefile.in  config.hpp.in  guichan.hpp
ext/guichan-0.8.2/include/guichan/: Makefile.in  actionevent.hpp  allegro.hpp  cliprectangle.hpp  color.hpp  defaultfont.hpp  event.hpp  exception.hpp  focuslistener.hpp  glut.hpp  graphics.hpp  gui.hpp  hge.hpp  imagefont.hpp  imageloader.hpp  inputevent.hpp  key.hpp  keyinput.hpp  listmodel.hpp  mouseevent.hpp  mouseinput.hpp  mouselistener.hpp  openlayer.hpp  rectangle.hpp  sdl.hpp  selectionlistener.hpp  widget.hpp  widgetlistener.hpp
ext/guichan-0.8.2/src/: Makefile.am  Makefile.in  actionevent.cpp  cliprectangle.cpp  defaultfont.cpp  event.cpp  font.cpp  genericinput.cpp  graphics.cpp  gui.cpp  guichan.cpp  image.cpp  imagefont.cpp  key.cpp  keyevent.cpp  keyinput.cpp  mouseevent.cpp  mouseinput.cpp  rectangle.cpp  widget.cpp
ext/guichan-0.8.2/src/allegro/: Makefile.am  Makefile.in  allegro.cpp  allegrographics.cpp  allegroimage.cpp  allegroinput.cpp
ext/guichan-0.8.2/src/contrib/: Makefile.in
ext/guichan-0.8.2/src/hge/: Makefile.am  Makefile.in  hgegraphics.cpp  hgeimagefont.cpp  hgeinput.cpp
ext/guichan-0.8.2/src/opengl/: Makefile.am  Makefile.in  guichan_opengl-0.8.pc.in  opengl.cpp  openglgraphics.cpp  openglimage.cpp
ext/guichan-0.8.2/src/openlayer/: Makefile.in  openlayerfont.cpp  openlayerinput.cpp
ext/guichan-0.8.2/src/sdl/: Makefile.am  Makefile.in  guichan_sdl-0.8.pc.in  sdlgraphics.cpp  sdlimage.cpp  sdlimageloader.cpp  (+1 more)
ext/openal-soft/: Makefile  config.h.in  configure  configure.in
ext/openal-soft/Alc/: bs2b.c
tests/core_tests/: CMakeLists.txt  CPPLINT.cfg  SConscript  fife_unit_test.h  fife_unittest++.h  fife_unittest.h  fixture.h  main.cpp  test_animations.cpp  test_asset_resolver.cpp  test_dat1++.cpp  test_dat1.cpp  test_dat2++.cpp  test_dat2.cpp  test_font_definition_loader.cpp  test_font_face.cpp  test_font_instance.cpp  test_font_manager.cpp  test_font_path_resolver.cpp  test_font_ttf.cpp  test_font_types.cpp  test_gui++.cpp  test_gui.cpp  test_imagepool++.cpp  test_imagepool.cpp  test_images++.cpp  test_images.cpp  test_key.cpp  test_logger.cpp  test_multicell_blocking.cpp  test_multicell_pathfinding.cpp  test_pathrenderer.cpp  test_rect++.cpp  test_rect.cpp  test_resourcemgr.cpp  test_sharedptr.cpp  test_text_layout.cpp  test_utf.cpp  test_vfs++.cpp  test_vfs.cpp  (+3 more)
(+6365 files in other folders)
